[package]
name = "vowena"
version = "0.1.0"
edition = "2021"
description = "Soroban smart contracts for the Vowena recurring billing protocol on Stellar"
license = "Apache-2.0"
repository = "https://github.com/vowena/protocol"
homepage = "https://vowena.xyz"
documentation = "https://docs.vowena.xyz"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "25.3.0"

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
